[gd_scene load_steps=6 format=3 uid="uid://b8bq0ndfavr5i"]

[ext_resource type="Script" uid="uid://cr56cjma6ruff" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://mmkv88hix0vb" path="res://spine_json.gd" id="2_0xm2m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0xm2m"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.572988, 0.572988, 0.572988, 0.6)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h2yge"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.572549, 0.572549, 0.572549, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="LabelSettings" id="LabelSettings_0xm2m"]
font_size = 10
font_color = Color(0.114897, 0.114897, 0.114897, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="SpineJson" type="Node" parent="."]
script = ExtResource("2_0xm2m")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 152.0
offset_top = 28.0
offset_right = 481.0
offset_bottom = 59.0
text = "C:/Users/26593/Desktop/out/skeleton.json"

[node name="选择json" type="Button" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 28.0
offset_right = 134.0
offset_bottom = 59.0
text = "选择json文件"

[node name="图像路径" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 154.0
offset_top = 68.0
offset_right = 482.0
offset_bottom = 99.0
text = "res://"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 73.0
offset_right = 67.0
offset_bottom = 96.0
text = "图片目录："

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 252.0
offset_right = 106.0
offset_bottom = 276.0
button_pressed = true
text = "重设带权重网格的父层级到根节点"

[node name="开始转换" type="Button" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 293.0
offset_right = 472.0
offset_bottom = 336.0
text = "开始转换"

[node name="安装插件" type="Button" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 346.0
offset_right = 133.0
offset_bottom = 377.0
text = "安装插槽脚本"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 115.0
offset_right = 212.0
offset_bottom = 181.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0xm2m")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="CheckBox2" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "使用atlas图集"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="选择atlas" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "选择atlas文件"

[node name="LineEdit_AtlasPath" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "C:/Users/26593/Desktop/out/skeleton.atlas"

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 439.0
offset_right = 464.0
offset_bottom = 481.0
theme_override_styles/panel = SubResource("StyleBoxFlat_h2yge")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="批量转换" type="Button" parent="PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "批量转换"

[node name="LineEdit_批量路径" type="LineEdit" parent="PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(336.37, 0)
layout_mode = 2
text = "C:/Users/26593/Desktop/out/"

[node name="Label" type="Label" parent="PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "大量动画转换时会出现正常卡顿
子文件夹名需与导出名相等
且子文件夹中存在【atlas、json、png】"
label_settings = SubResource("LabelSettings_0xm2m")

[connection signal="pressed" from="选择json" to="." method="_on_button_2_pressed"]
[connection signal="toggled" from="CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="开始转换" to="." method="_on_button_pressed"]
[connection signal="pressed" from="安装插件" to="." method="_on_button_3_pressed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/CheckBox2" to="." method="_on_check_box_2_toggled"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/选择atlas" to="." method="_on_选择atlas_pressed"]
[connection signal="pressed" from="PanelContainer2/MarginContainer/VBoxContainer/HBoxContainer/批量转换" to="." method="_on_批量转换_pressed"]
